--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,17 @@
 		<dependency>
 			<groupId>com.hedera.hashgraph</groupId>
 			<artifactId>sdk</artifactId>
-			<version>1.1.4</version>
+			<version>2.14.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
 		</dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
